added cabinetArt background

--- a/index.html
+++ b/index.html
@@ -1,19 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8" />
-	<title>SnowBall</title>
-<script type="text/javascript" src="framework/phaser.js"></script>
-  	<script type="text/javascript" src="js/main.js"></script>
-	<script type="text/javascript" src="js/states/Load.js"></script>
-	<script type="text/javascript" src="js/states/Menu.js"></script>
-	<script type="text/javascript" src="js/states/Ready.js"></script>
-	<script type="text/javascript" src="js/states/Play.js"></script>
-	<script type="text/javascript" src="js/states/GameOver.js"></script>
+  <style>
+    body{
+      background-image: url("assets/img/Cabinet_art.png");
+      background-position: 0px 0px;
+      background-repeat: no-repeat;
+      background-size:1920px 1080px;
+    }
+
+    #gameDiv{
+      margin-left: 40px;
+      padding-top:175px;
+    }
+
+
+  </style>
+  <meta charset="UTF-8" />
+  <title>SnowBall</title>
+
 
 </head>
 <body>
+<div id="gameDiv">
 
+</div>
+<script type="text/javascript" src="framework/phaser.js"></script>
+<script type="text/javascript" src="js/main.js"></script>
+<script type="text/javascript" src="js/states/Load.js"></script>
+<script type="text/javascript" src="js/states/Menu.js"></script>
+<script type="text/javascript" src="js/states/Ready.js"></script>
+<script type="text/javascript" src="js/states/Play.js"></script>
+<script type="text/javascript" src="js/states/GameOver.js"></script>
 </body>
 </html>
 
